--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css">
 
-    <script src="https://kit.fontawesome.com/75c58861f7.js" crossorigin="anonymous"></script>
-
-    <title>Luis Mata</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>    <title>Luis Mata</title>
   </head>
   <body>
     <div class="main bg-danger">
@@ -30,11 +28,14 @@
             </div>
           </div>
         <hr>
-        <div class="row mt-5"><i class="fa-solid fa-user"></i></div>
-        <div class="row"><i class="fa-brands fa-google"></i></div>
+        <div class="row">
+          <div class="col"><a href="" class="fab fa-facebook h1 text-danger"></a></div>
+          <div class="col"><a href="" class="fab fa-github h1 text-warning"></a></div>
+          <div class="col"><a href="" class="fab fa-instagram h1 text-danger"></a></div>
+          <div class="col"><a href="" class="fab fa-discord h1 text-warning"></a></div>
+        </div>
       </div>      
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
