--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
           </div>
         <hr>
-        <div class="row">
+        <div class="row text-center">
           <div class="col"><a href="" class="fab fa-facebook h1 text-danger"></a></div>
           <div class="col"><a href="" class="fab fa-github h1 text-warning"></a></div>
           <div class="col"><a href="" class="fab fa-instagram h1 text-danger"></a></div>
