--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
       <div class="container bg-light mt-3 rounded text-dark">
         <div class="row text-center p-3"><h1>Luis Mata</h1></div>
         <div class="row">
-          <div class="col container">
+          <div class="col-5 text-center mx-auto">
             <img src="img/headshot-2.jpg" alt="headshot.jpg" srcset="" class="img-fluid"></div>
-            <div class="col my-auto">
+            <div class="col-12 col-sm-7 my-auto">
               <p class="description text-center">I'm Luis Mata, a software development major from Cody, Wyoming. I'm currently attending Sheridan College and am passionate about making an impact with technology. I'm excited to further my knowledge in the field of software development and to explore the possibilities of what I can do with technology.</p>
             </div>
           </div>
         <hr>
         <div class="row text-center">
-          <div class="col"><a href="" class="fab fa-facebook h1 text-danger"></a></div>
-          <div class="col"><a href="" class="fab fa-github h1 text-warning"></a></div>
-          <div class="col"><a href="" class="fab fa-instagram h1 text-danger"></a></div>
-          <div class="col"><a href="" class="fab fa-discord h1 text-warning"></a></div>
+          <div class="col"><a href="" class="fab fa-facebook h1 text-light"></a></div>
+          <div class="col"><a href="https://github.com/luismata5656/" class="fab fa-github h1 text-warning"></a></div>
+          <div class="col"><a href="https://instagram.com/luismata8603?igshid=YmMyMTA2M2Y=" class="fab fa-instagram h1 text-danger"></a></div>
+          <div class="col"><a href="https://discordapp.com/users/422875646549819398" class="fab fa-discord h1 text-warning"></a></div>
         </div>
       </div>      
     </div>
