more responsive tuning

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css">
 
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>    <title>Luis Mata</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+	<title>Luis Mata</title>
   </head>
   <body>
     <div class="main bg-danger">
-      <div class="container bg-light mt-3 rounded text-dark">
+      <div class="container bg-light rounded text-dark p-3">
         <div class="row text-center p-3"><h1>Luis Mata</h1></div>
         <div class="row">
           <div class="col-5 text-center mx-auto">
             <img src="img/headshot-2.jpg" alt="headshot.jpg" srcset="" class="img-fluid"></div>
-            <div class="col-12 col-sm-7 my-auto">
-              <p class="description text-center">I'm Luis Mata, a software development major from Cody, Wyoming. I'm currently attending Sheridan College and am passionate about making an impact with technology. I'm excited to further my knowledge in the field of software development and to explore the possibilities of what I can do with technology.</p>
+<div class="my-auto col-5 container-fluid">
+        <p class="description text-center">I'm Luis Mata, a software development major from Cody, Wyoming. I'm currently attending Sheridan College and am passionate about making an impact with technology. I'm excited to further my knowledge in the field of software development and to explore the possibilities of what I can do with technology.</p>
             </div>
-          </div>
-        <hr>
+		  </div>
         <div class="row text-center">
           <div class="col"><a href="" class="fab fa-facebook h1 text-light"></a></div>
           <div class="col"><a href="https://github.com/luismata5656/" class="fab fa-github h1 text-warning"></a></div>
